--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -324,15 +324,15 @@ $(document).ready(function(){
 
     <div id="confirmar_div"></div>
 
-<div id="resultBusqueda">
+    <div id="resultBusqueda">
 	<!-- 	DETALLE USUARIO -->
-	<div id="detalleUsuario"></div>
+	<div id="detalleUsuario"></div><br>
 		
 	<!--DETALLE DE PRESTAMOS-->
-	<div id="prestamos"></div>
+	<div id="prestamos"></div><br>
 	
 	<!-- DETALLE DE RESERVAS -->
-	<div id="reservas"></div>
+	<div id="reservas"></div><br>
 	
 	<!-- DETALLE DE SANCIONES -->
 	<div id="sanciones"></div>
