--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
@@ -4,134 +4,132 @@ checkTr();
 [% IF circularDesdeDetalleUsuario == 0 %]
     [% INCLUDE 'partials/usuarios/detallePrestamos-noCirculation.inc' %]
 [% ELSE %]
-	[% IF prestamos_cant %]
-		
+	
 		[% USE HTML %]
 		
-		<fieldset> <legend class="titulo_legend_resaltado">[% "Ejemplares Prestados" | i18n %]</legend>
-			<table id="table_tablaPrestamos" class="prestamosResult datos_tabla" cellspacing=0  cellpadding=0 border=0  width="100%" > 
-			
-				<tr valign=middle class="titulo_tabla_resultado">
-			
-					<th>
-						<a class="click" id="checkAllPrestamos">
-						<img src="[% temas %]/[% tema %]/imagenes/iconos/check.png" border="0" 
-							title='[% "Seleccionar todos" | i18n %]'>
-						</a>
-					</th>
-			
-					<th>[% "T&iacute;tulo" | i18n %]</th>
-					<th>[% "Autor" | i18n %]</th>
-					<th>[% "C. Barra" | i18n %]</th>
-					<th>[% "Sig. Top." | i18n %]</th>
-					<th>[% "Ed." | i18n %]</th>
-					<th>[% "Vol." | i18n %]</th>
-					<th>[% "Pr&eacute;stamo" | i18n %]</th>
-					<th>[% "Vencimiento" | i18n %]</th>
-					<th>[% "Tipo" | i18n %]</th>
-			
-				</tr>
-			[% FOREACH prestamo IN PRESTAMOS %]
-				<tr align="center">
-			
-					<td>
-                        <input type="checkbox" name="chkboxPrestamos" value="[% prestamo.getId_prestamo %]" id="[% prestamo.getId_prestamo %]">
-					</td>
+		<fieldset> 
+              <legend class="titulo_legend_resaltado">[% "Ejemplares Prestados" | i18n %]</legend>
+                  <div class="well">
+                    <!-- [% "Ha buscado por" | i18n %]: <strong>[% importacion_busqueda%]</strong></br>-->
+           
+                     [% IF prestamos_cant %]
+                          [% "Cantidad de ejemplares prestados" | i18n %]: <strong>[% prestamos_cant %]</strong> </div>
 
-					<td width="14%" >
-					[% PERL %]
-						print C4::AR::Filtros::link_to(	text => "[% prestamo.nivel3.nivel1.getTitulo %]",
-		                                        url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl", 
-		                                        params =>	["id1=[% prestamo.nivel3.nivel1.getId1 %]"],
-		                                      ) ;
-					[% END %]
-					</td>
-					<td>
-					[% IF prestamo.nivel3.nivel1.getAutor %]
-						[% prestamo.nivel3.nivel1.getAutor %]
-					[% ELSE %]
-						&nbsp;
-					[% END %]
-					</td>
-			
-					<td>
-					[% PERL %]
-						print C4::AR::Filtros::link_to(	text => 	"[% prestamo.nivel3.getBarcode %]",
-														url => 		"[% url_prefix %]/catalogacion/estructura/detalleEjemplar.pl", 
-														params =>	["id3=[% prestamo.getId3 %]"],
-														title =>	"[% 'Detalle del Ejemplar' | i18n %]"
-													) ;
-					[% END %]
-					</td>
-			
-					<td>
-						[% IF prestamo.nivel3.getSignatura_topografica %] 
-							[% PERL %]
-								print C4::AR::Filtros::link_to(	text => 	"[% prestamo.nivel3.getSignatura_topografica %]",
-																url => 		"[% url_prefix %]/catalogacion/estructura/detalle.pl", 
-																params =>	["id1=[% prestamo.nivel3.nivel1.getId1 %]"],
-													) ;
-							[% END %]
-						[% END %]
-					</td>
-			
-					<td>  
-					[% IF prestamo.nivel3.nivel2.getEdicion %] [% prestamo.nivel3.nivel2.getEdicion %] [% ELSE %] - [% END %]
-					</td>
-			
-					<td> 
-					[% IF prestamo.nivel3.nivel2.getVolumen %] t [% prestamo.nivel3.nivel2.getVolumen %] 
-						[% IF prestamo.nivel3.nivel2.getVolumenDesc %] ([% prestamo.nivel3.nivel2.getVolumenDesc %])  [% END %] 
-					[% END %]
-					</td>
-					<td>
-					[% IF prestamo.getFecha_prestamo %] 
-						[% prestamo.getFecha_prestamo_formateada %]
-					[% ELSE %]
-						- 
-					[% END %]
-					</td>
-			
-					<td>
-						[% IF prestamo.getFecha_vencimiento %]
-						  <span class="[% IF prestamo.estaVencido %]fecha_vencida[% ELSE %]fecha_cumple[% END %]">
-		  				  [% prestamo.getFecha_vencimiento_formateada %]
-						  </span>
-						[% ELSE %]
-		          - 
-		        [% END %]
-		      </td>
+                          [% PERL %]
+                                print C4::AR::Filtros::tableHeader(   
+                                            id              => "table_tablaPrestamos",
+                                            class           => "",
+                                            selectAll_id    => "checkAllPrestamos",
+                                            columns         => ['[% "T&iacute;tulo"|i18n %]','[% "Autor"|i18n %]',
+                                                                '[% "C&oacute;digo de Barras" %]','[% "Sig. Top." | i18n %]',
+                                                                '[% "Ed." | i18n %]','[% "Vol." | i18n %]','[% "Pr&eacute;stamo" %]',
+                                                                '[% "Vencimiento" %]','[% "Tipo" %]'
+                                                              ]
+                                                                            
+                                                  ) ;
+                          [% END %]
+        
+                        
+                        <tbody>
+                        [% FOREACH prestamo IN PRESTAMOS %]
+                            <tr>
+                        
+                                <td>
+                                    <input type="checkbox" name="chkboxPrestamos" value="[% prestamo.getId_prestamo %]" id="[% prestamo.getId_prestamo %]">
+                                </td>
+
+                                <td>
+                                [% PERL %]
+                                    print C4::AR::Filtros::link_to(	text => "[% prestamo.nivel3.nivel1.getTitulo %]",
+                                                            url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl", 
+                                                            params =>	["id1=[% prestamo.nivel3.nivel1.getId1 %]"],
+                                                          ) ;
+                                [% END %]
+                                </td>
+                                <td>
+                                [% IF prestamo.nivel3.nivel1.getAutor %]
+                                    [% prestamo.nivel3.nivel1.getAutor %]
+                                [% ELSE %]
+                                    &nbsp;
+                                [% END %]
+                                </td>
+                        
+                                <td>
+                                [% PERL %]
+                                    print C4::AR::Filtros::link_to(	text => 	"[% prestamo.nivel3.getBarcode %]",
+                                                                    url => 		"[% url_prefix %]/catalogacion/estructura/detalleEjemplar.pl", 
+                                                                    params =>	["id3=[% prestamo.getId3 %]"],
+                                                                    title =>	"[% 'Detalle del Ejemplar' | i18n %]"
+                                                                ) ;
+                                [% END %]
+                                </td>
+                        
+                                <td>
+                                    [% IF prestamo.nivel3.getSignatura_topografica %] 
+                                        [% PERL %]
+                                            print C4::AR::Filtros::link_to(	text => 	"[% prestamo.nivel3.getSignatura_topografica %]",
+                                                                            url => 		"[% url_prefix %]/catalogacion/estructura/detalle.pl", 
+                                                                            params =>	["id1=[% prestamo.nivel3.nivel1.getId1 %]"],
+                                                                ) ;
+                                        [% END %]
+                                    [% END %]
+                                </td>
+                        
+                                <td>  
+                                [% IF prestamo.nivel3.nivel2.getEdicion %] [% prestamo.nivel3.nivel2.getEdicion %] [% ELSE %] - [% END %]
+                                </td>
+                        
+                                <td> 
+                                [% IF prestamo.nivel3.nivel2.getVolumen %] t [% prestamo.nivel3.nivel2.getVolumen %] 
+                                    [% IF prestamo.nivel3.nivel2.getVolumenDesc %] ([% prestamo.nivel3.nivel2.getVolumenDesc %])  [% END %] 
+                                [% END %]
+                                </td>
+                                <td>
+                                [% IF prestamo.getFecha_prestamo %] 
+                                    [% prestamo.getFecha_prestamo_formateada %]
+                                [% ELSE %]
+                                    - 
+                                [% END %]
+                                </td>
+                        
+                                <td>
+                                    [% IF prestamo.getFecha_vencimiento %]
+                                      <span class="[% IF prestamo.estaVencido %]fecha_vencida[% ELSE %]fecha_cumple[% END %]">
+                                      [% prestamo.getFecha_vencimiento_formateada %]
+                                      </span>
+                                    [% ELSE %]
+                                        - 
+                                    [% END %]
+                                </td>
 		
-					<td>
-						[% IF prestamo.tipo.id_tipo_prestamo %]
-								[% prestamo.tipo.getDescripcion %]
-						[% END %]
-					</td>
-		    </tr>
-			[% END %] <!-- FOREACH prestamos -->
-			
-			</table>
-		    [% IF prestamos_cant %]	
-		         [% PERL %]
-		             print C4::AR::Filtros::to_Icon(  
-		                                                 boton   => "icon_devolver",
-		                                                 onClick => "realizarAccion('DEVOLUCION','table_tablaPrestamos',generaDivDevolucion);",
-		                                                 title   => "[% 'Devolver' | i18n %]",
-		                                                alternClass => "botonCentrado"
-		                    ) ;
-		        [% END %]
-			[% END %]	
-			[% IF algunoSeRenueva>0 && vencidos == 0 %]
-		        [% PERL %]
-		            print C4::AR::Filtros::to_Icon(  
-		                                                boton   => "icon_renovar",
-		                                                onClick => "realizarAccion('RENOVACION','table_tablaPrestamos',generaDivRenovacion);",
-		                                                title   => "[% 'Renovar' | i18n %]",
-		                                                alternClass => "botonCentrado"
-		                    ) ;
-		        [% END %]
-			[% END %]
-		
+                                <td>
+                                    [% IF prestamo.tipo.id_tipo_prestamo %]
+                                            [% prestamo.tipo.getDescripcion %]
+                                    [% END %]
+                                </td>
+                          </tr>
+                      [% END %] <!-- FOREACH prestamos -->
+                    </tbody>  
+                  
+			</table> 
+
+                      [% PERL %]
+                              print C4::AR::Filtros::action_set_button(    
+                                                                  title           => "[% 'Prestamos' | i18n %]",
+                                                                  button          => 'btn btn-primary',
+
+                                                                  actions         => [
+                                                                                      [% IF prestamos_cant %]{title => "Devolver", action=>'realizarAccion("DEVOLUCION","table_tablaPrestamos",generaDivDevolucion)',icon=>"icon-share-alt"}[% END %],
+                                                                                      [% IF algunoSeRenueva>0 && vencidos == 0 %]{title => "Renovar", action=>'realizarAccion("RENOVACION","table_tablaPrestamos",generaDivRenovacion)', icon=>"icon-repeat"}[% END %],
+                                                                                      ],
+
+                                      ) ;
+                      [% END %]
+            [% ELSE %]
+           
+            </div>
+            <div class="alert alert-info">[% 'No hay importaciones para mostrar'| i18n %]</div>
+        
 		</fieldset>
 	[% END %]
 [% END %]
