--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialReservas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialReservas.tmpl
@@ -1,85 +1,81 @@
 [% USE HTML %]
 
-[% IF cantidad %]
-		<div class="resultados_consulta">[% "Cantidad de reservas realizadas" | i18n %]: &nbsp;[% cantidad %]</div> 
-		<div class="contenedor_paginador">[% paginador %]</div>
-		<table class="tablaHistorialReservas datos_tabla" cellspacing=0  cellpadding=0 border=0 width="100%">
-		    <tr class="titulo_tabla_resultado">
-		        <td>
-		            [% "Responsable" | i18n %]
-			    </td>
-			    <td>
-				    [% "T&iacute;tulo" | i18n %]
-			    </td>
-			    <td>
-		            [% "Autor" | i18n %]
-			    </td>
-		        <td>
-		            [% "Edici&oacute;n" | i18n %]
-		        </td>
-	            <td>
-				    [% "C&oacute;digo" | i18n %]
-		        </td>
-			    <td>
-			        [% "Fecha" | i18n %]
-			     </td>
-		        <td>
-		            [% "Operaci&oacute;n" | i18n %]
-		        </td>
-		    </tr>	    
-		    [% FOREACH reserva IN loop_reading %]
-		    <tr valign=middle align="center">  
-		        <td>
-				    [% IF reserva.responsable == "Sistema" %]
-                        Sistema 
-                    [% ELSE %]
-                        [% reserva.responsable_ref.persona.getApeYNom %]
-                    [% END %]
-			    </td>
-			    <td>
-				    [% PERL %]
-						    print C4::AR::Filtros::link_to(	text => 	"[% HTML.escape(reserva.nivel2.nivel1.getTitulo) %]",
-		                                                    url => 		"[% url_prefix %]/catalogacion/estructura/detalle.pl",
-														    params =>	["id1=[% HTML.escape(reserva.nivel2.nivel1.getId1) %]"], 
-													    ) ;
-				    [% END %]
-			    </td>   
-                <td class="autor_result">
-                    <a class="click" onClick="buscarPorAutor('[% reserva.nivel2.nivel1.getAutor %]')" title="[% 'Filtrar por Autor' | i18n %]">
-                        [% reserva.nivel2.nivel1.getAutor %]
-                    </a>
-                </td>
-			    <td>
-                    [% IF reserva.nivel2.getEdicion %]
-                        [% HTML.escape(reserva.nivel2.getEdicion) %]
-                    [% ELSE %]
-                        --
-                    [% END %]
-			    </td>
-			    <td align="center" >
-                    [% IF reserva.id3 %]
 
-					    [% PERL %]
-							    print C4::AR::Filtros::link_to(	text => 	"[% reserva.nivel3.getBarcode %]",
-															    url => 		"[% url_prefix %]/catalogacion/estructura/detalleEjemplar.pl", 
-															    params =>	["id3=[% reserva.getId3 %]"],
-															    title =>	"[% "Detalle del Ejemplar" | i18n %]"
-														    );
-					    [% END %]	
-					    
-				    [% ELSE %]
-				        ([% 'Reserva de grupo' | i18n %])
-				    [% END %]
-			    </td>
-			    <td>
-				    [% reserva.getFecha_formateada %]
-			    </td>
-			    <td>
-                    [% reserva.getTipo_operacion %]
-			    </td>
-		    [% END %] <!-- FOREACH PRIMERO -->
-		
-		</table>
-[% ELSE %]
-    <div class="resultados_consulta">[% "No se han realizado reservas." | i18n %] &nbsp;[% cant %]</div>
-[% END %] 
+<div class="well">
+            [% IF cantidad %]
+                    [% "Cantidad de reservas realizadas" | i18n %]: &nbsp;[% cantidad %]</div> 
+                  
+                    <div class="contenedor_paginador">[% paginador %]</div>
+                    
+                    [% PERL %]
+                                print C4::AR::Filtros::tableHeader(   
+                                            id              => "tablaHistorialReservas",
+                                            class           => "",
+                                            selectAll_id    => "",
+                                            columns         => ['[% "Responsable"|i18n %]','[% "T&iacute;tulo"|i18n %]',
+                                                                '[% "Autor" %]','[% "Edici&oacute;n" | i18n %]','[% "C&oacute;digo" %]',
+                                                                '[% "Fecha" %]','[% "Operaci&oacute;n" %]'
+                                                              ]
+                                                                            
+                                                  ) ;
+                     [% END %]
+
+                     <tbody>  
+                        [% FOREACH reserva IN loop_reading %]
+                        <tr>  
+                            <td>
+                                [% IF reserva.responsable == "Sistema" %]
+                                    Sistema 
+                                [% ELSE %]
+                                    [% reserva.responsable_ref.persona.getApeYNom %]
+                                [% END %]
+                            </td>
+                            <td>
+                                [% PERL %]
+                                        print C4::AR::Filtros::link_to(	text => 	"[% HTML.escape(reserva.nivel2.nivel1.getTitulo) %]",
+                                                                        url => 		"[% url_prefix %]/catalogacion/estructura/detalle.pl",
+                                                                        params =>	["id1=[% HTML.escape(reserva.nivel2.nivel1.getId1) %]"], 
+                                                                    ) ;
+                                [% END %]
+                            </td>   
+                            <td class="autor_result">
+                                <a class="click" onClick="buscarPorAutor('[% reserva.nivel2.nivel1.getAutor %]')" title="[% 'Filtrar por Autor' | i18n %]">
+                                    [% reserva.nivel2.nivel1.getAutor %]
+                                </a>
+                            </td>
+                            <td>
+                                [% IF reserva.nivel2.getEdicion %]
+                                    [% HTML.escape(reserva.nivel2.getEdicion) %]
+                                [% ELSE %]
+                                    --
+                                [% END %]
+                            </td>
+                            <td>
+                                [% IF reserva.id3 %]
+
+                                    [% PERL %]
+                                            print C4::AR::Filtros::link_to(	text => 	"[% reserva.nivel3.getBarcode %]",
+                                                                            url => 		"[% url_prefix %]/catalogacion/estructura/detalleEjemplar.pl", 
+                                                                            params =>	["id3=[% reserva.getId3 %]"],
+                                                                            title =>	"[% "Detalle del Ejemplar" | i18n %]"
+                                                                        );
+                                    [% END %]	
+                                    
+                                [% ELSE %]
+                                    ([% 'Reserva de grupo' | i18n %])
+                                [% END %]
+                            </td>
+                            <td>
+                                [% reserva.getFecha_formateada %]
+                            </td>
+                            <td>
+                                [% reserva.getTipo_operacion %]
+                            </td>
+                          </tr>
+                        [% END %] <!-- FOREACH PRIMERO -->
+                       </tbody>
+                    </table>
+            [% ELSE %]
+                </div>
+                <div class="alert alert-info">[% "No se han realizado reservas." | i18n %] &nbsp;[% cant %]</div>
+            [% END %] 
