--- a/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
@@ -22,9 +22,9 @@
                 <td>                  
                     [% PERL %]
                           print C4::AR::Filtros::action_button( 
-                                                    button         => "btn click",
+                                                    button         => "btn btn-primary click",
                                                     action       => 'modificarVariable("[% preferencia.getVariable %]","[% preferencia.getType %]");', 
-                                                    icon         => "icon-edit",
+                                                    icon         => "icon-white icon-edit",
                                                   ) ;
 
 
