--- a/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
@@ -383,11 +383,21 @@ $(document).ready( function() {
 </script>
 
 <div class="titulos"></div>
-<fieldset id="reportes">
-    <legend class="titulo_legend"> [% "Administraci&oacute;n de Preferencias del Sistema" | i18n %] </legend>
-    <ul>
-        <li class="sub_item filtros">
+<fieldset>
+    <legend> [% "Administraci&oacute;n de Preferencias del Sistema" | i18n %] </legend>
+    <form class="well form-search" onsubmit="return false">
+
             <input type="text" id="buscar" name="buscar" >
+            
+              [% PERL %]
+	                                print C4::AR::Filtros::to_Button(   text    => "[% 'Limpiar' | i18n %]",
+	                                                                    boton   => "btn",
+	                                                                    onClick => "limpiar();",
+	                                                                    title   => "[% 'Limpiar' | i18n %]",
+	                                                                    inline  => 1,
+	                                        ) ;
+	            [% END %]
+	            
 	            [% PERL %]
 	                                print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
 	                                                                    boton   => "boton_buscar",
@@ -396,16 +406,8 @@ $(document).ready( function() {
 	                                                                    inline  => 1,
 	                                        ) ;
 	            [% END %]
-	            [% PERL %]
-	                                print C4::AR::Filtros::to_Button(   text    => "[% 'Limpiar' | i18n %]",
-	                                                                    boton   => "boton_borrar",
-	                                                                    onClick => "limpiar();",
-	                                                                    title   => "[% 'Limpiar' | i18n %]",
-	                                                                    inline  => 1,
-	                                        ) ;
-	            [% END %]
-       </li>
-    </ul>
+	            
+    </form>
 </fieldset>
 
 <div id="divResultado" style="clear: both;"></div>
