--- a/intranet/htdocs/intranet-tmpl/admin/global/estilosResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/estilosResultConfig.tmpl
@@ -31,9 +31,9 @@
                     
                      [% PERL %]
                         print C4::AR::Filtros::action_button( 
-                                                      button    => "btn click",
+                                                      button    => "btn btn-primary click",
                                                       action    => 'modificarVariable("[% preferencia.getVariable %]","[% preferencia.getCategoria %]");', 
-                                                      icon      => "icon-edit",
+                                                      icon      => "icon-edit icon-white",
                                                       title     => "",
                                                   ) ;
                     [% END %]
