--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
@@ -58,9 +58,9 @@
                                 
                                     [% PERL %]
                                       print C4::AR::Filtros::action_button( 
-                                                                      button    => "btn click",
+                                                                      button    => "btn click btn-danger",
                                                                       action    => 'eliminarNovedad("[% novedad.id %]")', 
-                                                                      icon      => "icon-remove",
+                                                                      icon      => "icon-white icon-remove",
                                                                       title     => "",
                                                                   ) ;
 
@@ -70,10 +70,10 @@
                                 <td>
                                     [% PERL %]
                                           print C4::AR::Filtros::action_link_button( 
-                                                                          button    => "btn click",
+                                                                          button    => "btn btn-primary click",
                                                                           url       => "[% url_prefix %]/admin/global/editar_novedad_intra.pl", 
                                                                           params    =>  ["id=[% novedad.id %]"],
-                                                                          icon      => "icon-edit",
+                                                                          icon      => "icon-white icon-edit",
                                                                           title     => "",
                                                                       ) ;
 
