--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -28,7 +28,7 @@
 
 <fieldset>
     <legend>[% "Mensajes de Contacto" | i18n %]:</legend>
-        <div class="contenedor_paginador">[% paginador %]</div>
+        <div>[% paginador %]</div>
         <div class="datos_tabla_div_user">
             <div class="alert alert-info">[% "La cantidad de mensajes es" | i18n %]: [% cant_mensajes %]</div>
             
@@ -77,9 +77,9 @@
                                 
                                 [% PERL %]
                                   print C4::AR::Filtros::action_link_button( 
-                                                                  button    => "btn click click",
+                                                                  button    => "btn btn-danger click",
                                                                   url       => "[% url_prefix %]/admin/mensajes_contacto.pl?token=[% token %]&id=[% mensaje.id %]&tipoAccion=eliminar", 
-                                                                  icon      => "icon-remove",
+                                                                  icon      => "icon-remove icon-white",
                                                                   title     => "",
                                                               ) ;
 
